infrastructure/arc/networkpolicy-arc-systems.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: arc-systems-default
  namespace: arc-systems
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - {}
